# api/routes/productRoute.js
@@ -6,14 +6,14 @@ const { listPictures } = require('../controllers/picturesController');
 const router = express.Router();
 
 
-router.get('/', /* verifyJWT, */existProductListVerify, listProduct);
-router.get('/search/', /* verifyJWT, */existProductListKeywordVerify, listProductByKeyword);
-router.get('/mostwanted', /* verifyJWT, */existProductListMostwantedVerify, listMostWantedProduct);
-router.get('/:id/pictures', /* verifyJWT, */ listPictures);
-router.get('/:id', /* verifyJWT, */ existProductListByIdVerify, listProductByID);
-router.post('/', /* verifyJWT, */ /* verifyRoleCreateDelete, */verifyCreate, createProduct);
-router.put('/:idProduct', /* verifyJWT, */ /* verifyRoleEdit, */verifyEdit, existProductEditVerify, editProduct);
-router.delete('/:id', /* verifyJWT, */ /* verifyRoleCreateDelete, */existProductDeleteVerify, deleteProduct);
+router.get('/', verifyJWT, existProductListVerify, listProduct);
+router.get('/search/', verifyJWT, existProductListKeywordVerify, listProductByKeyword);
+router.get('/mostwanted', verifyJWT, existProductListMostwantedVerify, listMostWantedProduct);
+router.get('/:id/pictures',verifyJWT, listPictures);
+router.get('/:id', verifyJWT, existProductListByIdVerify, listProductByID);
+router.post('/', verifyJWT, verifyRoleCreateDelete, verifyCreate, createProduct);
+router.put('/:idProduct', verifyJWT, verifyRoleEdit, verifyEdit, existProductEditVerify, editProduct);
+router.delete('/:id', verifyJWT,verifyRoleCreateDelete, existProductDeleteVerify, deleteProduct);
 
 
 
